@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.6465 2004/07/06 13:52:25 xtraeme Exp $
+$NetBSD: CHANGES,v 1.6466 2004/07/06 13:58:55 xtraeme Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -3273,3 +3273,4 @@ Changes to the packages collection and infrastructure in 2004:
 	Updated thunderbird to 0.7.1 [taya 2004-07-06]
 	Updated thunderbird-gtk2 to 0.7.1 [taya 2004-07-06]
 	Updated libxml2 to 2.6.11 [xtraeme 2004-07-06]
+	Updated libxslt to 1.1.8 [xtraeme 2004-07-06]
